[MOD] Refactor and initial implementation of setCompletedStage
